apps/homepage/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/managed-by: kustomize
