apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: homepage
